[fix] 修正手風琴overflow、調整展開按鈕文字

--- a/assets/scss/custom/_cart-completed.scss
+++ b/assets/scss/custom/_cart-completed.scss
@@ -223,6 +223,7 @@
             border-bottom: 1px solid map-get($colors, brand-1);
             transition: max-height .6s ease-in-out, padding .6s ease-in-out;
             padding: 2.4rem 0;
+            overflow: hidden;
             
             &.-hide {
                 padding: 0;
